# Omniscript

./: LICENSE  README.md
Omniscript/: AlarmHandler.cpp  AlarmHandler.h  Alarms.cpp  Alarms.h  BaseFunctor.h  Block.cpp  Block.h  CMakeLists.txt  DBConnection.cpp  DBConnection.h  Device.cpp  HVAC.cpp  HVAC.h  Interpreter.cpp  Interpreter.h  JSON.cpp  JSON.cpp-deprecated  JSON.h  JSON.h-deprecated  Logger.cpp  Logic.cpp  Logic.h  Omniscript.1  Operators.cpp  Operators.h  Script.cpp  Script.h  Triggers.cpp  Triggers.h  Variables.cpp  Variables.h  XML_Parser.cpp  XML_Parser.h  api.h  main.cpp  md5.h
Omniscript.xcodeproj/: project.pbxproj
Omniscript.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Omniscript.xcodeproj/xcuserdata/aaronh.xcuserdatad/xcschemes/: Omniscript.xcscheme  xcschememanagement.plist
Omniscript/cmake/modules/: MacroOutOfSourceBuild.cmake
Omniscript/lib/: libmysqlcppconn.so.7.1.1.3  libmysqlcppconn.so.7.1.1.5
Omniscript/src/: AlarmHandler.cpp  AlarmHandler.h  Alarms.cpp  BaseFunctor.cpp  Block.cpp  Block.h  DBConnection.cpp  DBConnection.h  Device.h  HVAC.cpp  HVAC.h  Interpreter.cpp  Interpreter.h  Logger.h  Script.h  ThreadPool.cpp  ThreadPool.h  Triggers.cpp  Variables.cpp  Variables.h  XML_Parser.cpp  XML_Parser.h  md5.cpp
